--- a/server/package.json
+++ b/server/package.json
@@ -43,6 +43,7 @@
     "passport-http": "0.3.0",
     "passport-jwt": "4.0.0",
     "reflect-metadata": "0.1.13",
+    "rxjs": "^7.8.0",
     "swagger-ui-express": "4.3.0",
     "ts-node": "9.1.1"
   },
@@ -68,6 +69,8 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "modulePathIgnorePatterns": ["<rootDir>/dist/"]
+    "modulePathIgnorePatterns": [
+      "<rootDir>/dist/"
+    ]
   }
 }
